--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /laskarit/viikko2/Maksukortti/target/
 /laskarit/viikko2/Unicafe/target/
 /laskarit/viikko2/Unicafe/nbproject/
+/OtmApp/Kevytlaskutus/target/
+/Kevytlaskutus/target/
+/Kevytlaskutus/nbproject/
+/Kevytlaskutus/database/
